--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <name>training-app</name>
   <url>http://maven.apache.org</url>
-<!-- <scm>
-      
-      <connection>scm:git:file://C:/integ_continue/git/training-app</connection>
-      <developerConnection>scm:git:file://C:/integ_continue/git/training-app</developerConnection>
-   </scm> -->
-
+  <properties>
+  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  <maven.compiler.target>1.8</maven.compiler.target>
+  <maven.compiler.source>1.8</maven.compiler.source>
+</properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,12 +23,27 @@
     <dependency>
   <groupId>mysql</groupId>
   <artifactId>mysql-connector-java</artifactId>
-  <version>5.1.35</version>
+  <version>5.1.32</version>
 </dependency>
   </dependencies>
   <build>
     <plugins>
- <plugin>
+      <plugin>
+        <!-- Build an executable JAR -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <classpathPrefix>lib/</classpathPrefix>
+              <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+</plugin>
+<plugin>
   <artifactId>maven-assembly-plugin</artifactId>
   <configuration>
     <archive>
@@ -50,21 +65,6 @@
     </execution>
   </executions>
 </plugin>
-      <plugin>
-        <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.2</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.mycompany.app.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 </project>
