--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
      environment:
        MYSQL_ROOT_PASSWORD: root
        MYSQL_DATABASE: training-app
-   wordpress:
+   phpmyadmin:
      depends_on:
        - db
      image: phpmyadmin/phpmyadmin
