--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: '3.3'
 services:
    app:
-     image: "training-app:$BUILD_TAG"
-     build:
-       context: .
-       dockerfile: Dockerfile-training-app
+     image: "$IMAGE_NAME:$BUILD_TAG"
    db:
      image: mysql:5.7
      volumes:
@@ -18,7 +15,7 @@ services:
        - db
      image: phpmyadmin/phpmyadmin
      ports:
-       - "8000:80"
+       - "$PHPMYADMIN_PORT:80"
      restart: always
 volumes:
     dbdata:
