--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
    app:
-     image: "$IMAGE_NAME:$BUILD_TAG"
+     image: "$DOCKER_REG/$IMAGE_NAME:$BUILD_TAG"
    db:
      image: mysql:5.7
      volumes:
